--- a/stylesheets/ui.less
+++ b/stylesheets/ui.less
@@ -1,4 +1,5 @@
 @import "settings.less";
 @import "bootstrap/bootstrap.less";
 @import "wonka/wonka.less";
+@import "apiconsole/apiconsole.less";
 @import "codemirror/codemirror.less";
