--- a/stylesheets/apiconsole/apiconsole.less
+++ b/stylesheets/apiconsole/apiconsole.less
@@ -1,8 +1,8 @@
 @editorHeight: 150px;
-@editorBackground: lighten(@purple, 45%);
-@editorTextColor: white;
-@currentLineBackground: lighten(@purple, 60%);
-@currentLineColor: white;
-@textSelectedBackground: lighten(@purple, 75%);
-@cursorWidth: 3px;
-@cursorColor: @purple;
+@editorBackground: @green;
+@editorTextColor: black;
+@currentLineBackground: lighten(@green, 5%);
+@currentLineColor: black;
+@textSelectedBackground: white;
+@cursorWidth: 5px;
+@cursorColor: @black;
