--- a/stylesheets/wonka/wonka.less
+++ b/stylesheets/wonka/wonka.less
@@ -1,8 +1,8 @@
 @import "variables.less";
 
 .wjs-header {
-  background: rgba(19, 7, 34, .90);
-  color: @white;
+  background: @green;
+  color: @black;
   margin: 0;
   padding: 10px 60px;
 }
@@ -48,4 +48,8 @@
     border: 1px black solid;
     background: white;
   }
+}
+
+small {
+  color: black!important;
 }
