--- a/root/templates/main.hbs
+++ b/root/templates/main.hbs
@@ -1,7 +1,7 @@
 <script type="text/x-handlebars-template" id="root-main-template">
   <div class="wjs-header">
     <h1 class="container">
-      <img src="https://s3.amazonaws.com/conekta/landing_v2/imgs/conekta-logo.png" alt=""> <small>API Console</small>
+      <small>API Console</small>
     </h1>
   </div>
   <div class="container">
